--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,35 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      About
+      Mashable News Feed
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+<ion-card *ngFor = "let post of posts?.articles">
+
+   <img [src] = "post?.urlToImage" alt="" />
+<ion-card-content>
+
+  <ion-card-title>
+    {{post.title}}
+  </ion-card-title>
+
+<p>
+  {{post.description}}
+</p>
+<h3>
+  {{post.author}}
+</h3>
+<h5>
+  {{post.publishedAt}}
+</h5>
+</ion-card-content>
+
+</ion-card>
+  
+  
 
 </ion-content>
