--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,36 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
-</ion-content>
+    <ion-navbar color="primary">
+      <ion-title>
+        Tech News Feed
+      </ion-title>
+    </ion-navbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
+  <ion-card *ngFor = "let post of posts?.articles">
+  
+     <img [src] = "post?.urlToImage" alt="" />
+  <ion-card-content>
+  
+    <ion-card-title>
+      {{post.title}}
+    </ion-card-title>
+  
+  <p>
+    {{post.description}}
+  </p>
+  <h3>
+    {{post.author}}
+  </h3>
+  <h5>
+    {{post.publishedAt}}
+  </h5>
+  </ion-card-content>
+  
+  </ion-card>
+    
+    
+  
+  </ion-content>
+  
