--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,36 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+    <ion-navbar color="primary">
+      <ion-title>
+       Sports News Feed
+      </ion-title>
+    </ion-navbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
+  <ion-card *ngFor = "let post of posts?.articles">
+  
+     <img [src] = "post?.urlToImage" alt="" />
+  <ion-card-content>
+  
+    <ion-card-title>
+      {{post.title}}
+    </ion-card-title>
+  
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    {{post.description}}
   </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
-</ion-content>
+  <h3>
+    {{post.author}}
+  </h3>
+  <h5>
+    {{post.publishedAt}}
+  </h5>
+  </ion-card-content>
+  
+  </ion-card>
+    
+    
+  
+  </ion-content>
+  
