--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs color="primary">
+  <ion-tab [root]="tab1Root" tabTitle="Sports Feeds" tabIcon="paper"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Mashable Feeds" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Tech Feeds" tabIcon="stats"></ion-tab>
 </ion-tabs>
